--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   
 
-    <section class="imagem">
+    <section class="imagem" id="img001">
         <p>
             Não é mais como era antes<br>
             É tudo abreviado<br>
@@ -66,7 +66,7 @@
         </p>
     </section>
     
-    <section class="imagem">
+    <section class="imagem" id="img002">
         <p>
             Tenho saudade das cartas<br>
             Escritas com a própria mão<br>
